# pushkin-l10n

./: .gitignore  CMakeLists.txt  README.md
cmake/scripts/: l10n.cmake  l10n_json.cmake  msgmerge.cmake
include/pushkin/l10n/: message.hpp  message_cereal.hpp  message_io.hpp  message_util.hpp  po_generator.hpp
include/pushkin/l10n/grammar/: placeholders.hpp
include/tip/l10n/: message.hpp
scripts/: xjsongettext
src/: CMakeLists.txt  message.cpp  message_cereal.cpp  po_generator.cpp
src/pushkin/l10n/: CMakeLists.txt  message.cpp  message_cereal.cpp  message_util.cpp  po_generator.cpp
test/: CMakeLists.txt  arg_value_test.cpp  config.in.hpp  generate_test_po_main.cpp  l10n_test_data.csv  message_test.cpp  message_translate_test.cpp  placeholders_test.cpp  test_data_loader.cpp  test_data_loader.hpp
test/translations/: l10ntest.pot
test/translations/en/: l10ntest.po
test/translations/es/: l10ntest.po
test/translations/ru/: l10ntest.po
translations/: messages.pot
translations/en/: messages.po
translations/ru/: messages.po
